Modified second card

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <article class="card">
         <img src="https://doodleipsum.com/300x169/flat?i=ca2314396afed76441fb67a45df7649d" alt="flat doodle" class="card__image">
         <h2 class="card__heading">Working With Notion</h2>
-        <div class="card__content"><p>I database api modern bundle stateless security engineer f***. Behavior-driven package manager infrastructure yarn hashtable UX first in first out class Edge stand-up. Ecommerce platform open source elixir programmer node_modules lang continuous integration. Greenfield compile observer pattern contribution markup Backbone.js naming things compile. Injection state Linux interface resolve raspberry pi killer app api.</p></div>
+        <div class="card__content"><p>I database api modern bundle stateless security engineer f***. Behavior-driven package manager infrastructure yarn hashtable UX first in first out class Edge stand-up. Ecommerce platform open source elixir programmer node_modules lang continuous integration. Greenfield compile observer pattern contribution markup Backbone.js naming things compile.</p></div>
         <a href="#" class="card__btn">Check this out</a>
       </article>
       <article class="card">
