--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Notion CMS</title>
+    <title>David's Notion CMS</title>
     <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" href="https://unpkg.com/open-props" />
     <link
